# Pet-project_MINING-ANALYTICS_BLOCKS

./: .gitignore  Cargo.toml  RABBITMQ_SETUP.md  README.md  README_reader.md  run_reader.sh
config/: config-example.json
migrations/: 20250813142305_create_blocks_table.sql  20250813142654_create_transactions_table.sql  20250815161704_extend_transactions.sql
src/: infrastructure.rs  logs.rs  main.rs  main_reader.rs  scheduler.rs  utils.rs
src/config/: config.rs
src/domain/: block.rs  transaction.rs
src/infrastructure/: collector.rs  db.rs  queue.rs
src/infrastructure/collector/: mempool.rs  namespace.rs
src/infrastructure/db/: models.rs  postgres.rs  repository.rs
src/infrastructure/queue/: queue_service.rs  stream_rabbitmq.rs
src/logs/: init_logs.rs
src/scheduler/: block_watcher.rs  rabbit_watcher.rs
src/utils/: block_reward.rs  script_sig.rs
