[package]
name = "mining-mining-analytics_blocks"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }

serde = "1.0.219"
serde_json = "1.0.140"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
console-subscriber = "0.4.1"

# HTTP request
reqwest = { version = "0.12.15", features = ["json", "__tls"] }

chrono = "0.4.40"
uuid = "1.16.0"
anyhow = "1.0.98"

hex = "0.4.3"

bitcoin = { version = "0.32.5", features = ["serde"] }
log = "0.4.27"

rabbitmq-stream-client = "0.4.4"