[package]
name = "mining-mining-analytics_blocks"
version = "0.1.0"
edition = "2024"
default-run = "mining-mining-analytics_blocks"

[[bin]]
name = "main_reader"
path = "src/main_reader.rs"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }

serde = "1.0.219"
serde_json = "1.0.140"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
console-subscriber = { version = "0.4.1", optional = true }

# HTTP request
reqwest = { version = "0.12.15", features = ["json"] }

chrono = { version = "0.4.40", features = ["serde"] }
uuid = "1.16.0"
anyhow = "1.0.98"

hex = "0.4.3"

bitcoin = { version = "0.32.5", features = ["serde"] }
log = "0.4.27"
env_logger = "0.11.3"
futures-util = "0.3"

rabbitmq-stream-client = "0.4.4"

# database
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }

[features]
console = ["dep:console-subscriber"]